--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<script type="module">
-import "./test.js"; // NG
-</script>
+<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
+<title>AIS Stream test</title>
+</head><body>
+<h1>AIS Stream test</h1>
+<script type="module" src="https://code4fukui.github.io/csv-map/csv-map.js"></script>
+<csv-map src=latest/PositionReport.csv level=5></csv-map>
+<csv-map src=latest/ShipStaticData.csv level=5></csv-map>
+<hr>
+<a href=https://github.com/code4fukui/aisstream/>src on GitHub</a>
