--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 </head><body>
 <h1>AIS Stream test</h1>
 <script type="module" src="https://code4fukui.github.io/csv-map/csv-map.js"></script>
+<h2>PositionReport with ShipStaticData</h2>
 <csv-map src=latest/PositionReport.csv level=5></csv-map>
+<h2>ShipStaticData</h2>
 <csv-map src=latest/ShipStaticData.csv level=5></csv-map>
 <hr>
 <a href=https://github.com/code4fukui/aisstream/>src on GitHub</a>
